# ROS_Ardrone

./: README.md  contributors.txt~  readme.mg
introROS2016_jurain_mojer/: CMakeLists.txt  package.xml
intro_services_example/: CMakeLists.txt  CMakeLists.txt~  package.xml
intro_services_example/src/: server_node.cpp~  service_client.cpp  service_client.cpp~  service_server.cpp  service_server.cpp~
intros_action_example/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
intros_action_example/launch/: launcher.launch  launcher.launch~  launcher.xml~
intros_action_example/src/: action_client.cpp  action_client.cpp~  action_server.cpp  action_server.cpp~  action_server~
intros_exercise7/: CMakeLists.txt  package.xml
intros_exercise7/cfg/: joint1params.cfg
intros_exercise7/launch/: all.launch  load_controller.launch  robot_7.launch  w1.launch
intros_exercise7/params/: ctrl_params.yaml
intros_exercise7/src/: anglepublisher.cpp
intros_exercise7/urdf/: robot_7.urdf
intros_msgs_example/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
intros_msgs_example/msg/: quaternion.msg~
intros_usb_cam/: CMakeLists.txt  package.xml
intros_usb_cam/launch/: all.launch  ar_pose.launch  usb_cam.launch  usb_cam.yaml
jm_final_project/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme.mg~
jm_final_project/cfg/: start_rqt.cfg  take_land.cfg
jm_final_project/launch/: Final_Real.launch  Final_sim.launch  Real_experimentation.launch  all1.launch~  ar_pose_bottom.launch  ar_pose_bottom.launch~  ar_pose_front.launch  prueba_real.launch~  sim_experimentation.launch
jm_final_project/msg/: giro_toggle.msg
jm_final_project/src/: Brain.cpp  Documento sin título  ar_sight.cpp  arsuscriber2.cpp  arsuscriber_final.cpp~  arsuscriber_marker1.cpp~  arsuscriberforsimulation.cpp  controller_final.cpp  controller_final.cpp~  keyboardControl.cpp  keyboardControl.cpp~  land_publisher_node.cpp  land_publisher_node.cpp~  main.cpp  main.cpp~  main_final.cpp~  main_final~  messagepub.cpp  rqt_commander.cpp  simple_publisher.cpp~  sonar_control.cpp  sonar_control.cpp~  spin_controller.cpp  take_land_node.cpp  take_land_node.cpp~  take_off_node.cpp  timeCounter_server.cpp~  watchmarker_server.cpp  yaw_client.cpp  yaw_server.cpp  z_server.cpp
jm_final_project/srv/: watch_marker.srv  yawrange.srv  zrange.srv
yours/: CMakeLists.txt  package.xml
yours/cfg/: dynparams.cfg
yours/src/: arsuscriber.cpp  node_prove.cpp
